# slitflow

./: .coveragerc  .gitignore  .gitpod.Dockerfile  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  requirements-dev.txt  requirements-full.txt  requirements.txt  setup.cfg  test.py
docs/: about.rst  changelog.rst  conf.py  develop.rst  examples.rst  getting_started.rst  getting_started_advanced.rst  getting_started_basic.rst  index.rst  requirements.txt  user_guide.rst  user_guide_concept.rst  user_guide_customize.rst  user_guide_data.rst  user_guide_pipeline.rst
docs/api/: slitflow.data.rst  slitflow.fig.bar.rst  slitflow.fig.figure.rst  slitflow.fig.image.rst  slitflow.fig.line.rst  slitflow.fig.rst  slitflow.fig.scatter.rst  slitflow.fig.style.rst  slitflow.fig.trajectory.rst  slitflow.fun.img.rst  slitflow.fun.misc.rst  slitflow.fun.palette.rst  slitflow.fun.rst  slitflow.fun.sort.rst  slitflow.img.calc.rst  slitflow.img.convert.rst  slitflow.img.create.rst  slitflow.img.filter.rst  slitflow.img.image.rst  slitflow.img.montage.rst  slitflow.img.noise.rst  slitflow.img.plot.rst  slitflow.img.proc.rst  slitflow.img.rst  slitflow.info.rst  slitflow.load.rst  slitflow.load.table.rst  slitflow.load.tif.rst  slitflow.loc.convert.rst  slitflow.loc.fit.rst  slitflow.loc.mask.rst  slitflow.loc.random.rst  slitflow.loc.rst  slitflow.manager.rst  slitflow.name.rst  slitflow.rst  slitflow.setindex.rst  (+17 more)
scripts/: examples_msd_analysis.py  examples_particle_movie_simulation.py  getting_started_advanced.py  getting_started_basic.py
(+21 files in other folders)
