[metadata]
name = slitflow
version = attr: slitflow.__version__
author = Yuma Ito
author_email = yitou@bio.titech.ac.jp
description = A Python framework for single-molecule trajectory and localization analysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    numpy >= 1.23.4
    pandas >= 1.5.1
    tqdm >= 4.64.1
    psutil >= 5.9.3

[options.packages.find]
where = src
